--- a/ChangeLog
+++ b/ChangeLog
@@ -5,3 +5,4 @@ Date        Version  Comment
 2017-03-03  0.1-2    Updated surname handling, enhanced demographics option, and improved error handling and documentation
 2017-04-10  0.1-3    Allows Census data download at level user prefers (block, tract, or county)
 2017-05-03  0.1-4    Fixed error in merge_surnames.R and updated relevant documentation
+2017-06-08  0.1-5    Updated http to https to access U.S. Census API
