--- a/ChangeLog
+++ b/ChangeLog
@@ -8,3 +8,5 @@ Date        Version  Comment
 2017-06-08  0.1-5    Updated http to https to access U.S. Census API
 2017-08-16  0.1-6    Removed extraneous documentation, renamed 2010 Surname List object, and added place as geography
 2017-08-31  0.1-7    Added testthat functionality
+2019-02-12  0.1-8    Updated to be compatible with U.S. Census API updates
+2019-02-20  0.1-9    Fixed census_helper.R so that state field can be lower case in user data
