--- a/ChangeLog
+++ b/ChangeLog
@@ -10,3 +10,4 @@ Date        Version  Comment
 2017-08-31  0.1-7    Added testthat functionality
 2019-02-12  0.1-8    Updated to be compatible with U.S. Census API updates
 2019-02-20  0.1-9    Fixed census_helper.R so that state field can be lower case in user data
+2020-10-08  0.1-10   Fixed minor warning message
