--- a/ChangeLog
+++ b/ChangeLog
@@ -13,3 +13,4 @@ Date        Version  Comment
 2020-10-08  0.1-10   Fixed minor warning message
 2020-04-22  0.1-11   Minor fix requested by CRAN
 2020-05-17  0.1-12   Some Census API improvements (thanks to Silvia Kim)
+2022-06-17  1.0.0    Updates to BISG, inclusion of fBISG and other package improvements
