--- a/ChangeLog
+++ b/ChangeLog
@@ -14,3 +14,4 @@ Date        Version  Comment
 2020-04-22  0.1-11   Minor fix requested by CRAN
 2020-05-17  0.1-12   Some Census API improvements (thanks to Silvia Kim)
 2022-06-17  1.0.0    Updates to BISG, inclusion of fBISG and other package improvements
+2022-10-04  1.0.1    Bug fixes for census url and census year
