docs(README): use thumbnail to link to The Who song

--- a/README.Rmd
+++ b/README.Rmd
@@ -163,4 +163,4 @@ U.S. Census Bureau (2021, October 8). Decennial Census API. Census.gov. Retrieve
 
 ### A related song
 
-Watch [this](https://www.youtube.com/watch?v=LYb_nqU_43w)!
+[![Thumbnail of the music video for "Who Are You" by The Who](https://img.youtube.com/vi/PNbBDrceCy8/maxresdefault.jpg)](https://www.youtube.com/watch?v=PNbBDrceCy8)
