--- a/ChangeLog
+++ b/ChangeLog
@@ -20,3 +20,4 @@ Date        Version  Comment
 2024-02-27  3.0.1    Github has changed their policy on binary formats in releases, need to refer to older version
 2024-04-02  3.0.2    Fixes a bug that led to overestimation of black and hispanic populations (see issue #145)
 2024-05-24  3.0.3    Fixes a bug that pushed NaN into small population tracts (see issue #151)
+2024-06-07  3.0.4    Fixes a bug related to a list of variables not being unnested properly (issue #151, #153)
